tests/miniJava/neg/006651_mutation.MiniJava
class java { public static void Main System.out.println String [ ] java ) { { } } }
